<resources>
    <string name="app_name">ProjektZespolowy</string>
    <string name="logo_lub_na">Logo lub nazwa aplikacji</string>

    <string name="log_in">Log in</string>

    <string name="username">username</string>
    <string name="password">password</string>

    <string name="ok">OK</string>
    <string name="or_register">or register</string>


    <string name="register">Register</string>

    <string name="or_log_in">or log in</string>
    <string name="settings">Settings</string>
    <string name="ProjektZespolowy">Projekt Zespolowy</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_plantbrowser">Plant Browser</string>
    <string name="menu_userbrowser">User Browser</string>
</resources>