<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projektzespolowy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.projektzespolowy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="com.example.projektzespolowy.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />

    <fragment
        android:id="@+id/nav_plant_browser"
        android:name="com.example.projektzespolowy.ui.plantBrowser.PlantBrowserFragment"
        android:label="@string/menu_plantbrowser"
        tools:layout="@layout/fragment_plant_browser" />

    <fragment
        android:id="@+id/nav_user_browser"
        android:name="com.example.projektzespolowy.ui.userBrowser.UserBrowserFragment"
        android:label="@string/menu_userbrowser"
        tools:layout="@layout/fragment_user_browser" />

</navigation>