<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:id="@+id/register_ativity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    <!--    Widok obsługuje logowanie użytkownika.-->

    <!--    Miejsce na logo aplikacji.-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/register"
        android:textAppearance="@style/log_in_register" />

    <RelativeLayout
        android:id="@+id/frame_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/frame">

        <!--    Pole wpisania nazwy użytkownika.-->
        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center_horizontal|top"
            android:inputType="textPersonName"
            android:lineSpacingExtra="0sp"
            android:hint="@string/username"
            android:textAppearance="@style/username_password" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/frame">

        <!--    Pole wpisania hasła użytkownika.-->
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center_horizontal|top"
            android:inputType="textPassword"
            android:lineSpacingExtra="0sp"
            android:hint="@string/password"
            android:textAppearance="@style/username_password" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/frame">

        <!--    Pole powtórzenia hasła użytkownika.-->
        <EditText
            android:id="@+id/password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center_horizontal|top"
            android:inputType="textPassword"
            android:lineSpacingExtra="0sp"
            android:hint="@string/password"
            android:textAppearance="@style/username_password" />
    </RelativeLayout>

    <!--    Przycisk wywołuje proces rejestracji.-->
    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:onClick="Register"
        android:text="@string/ok"
        android:textAppearance="@style/button_text"
        android:background="@drawable/button" />

    <!--    Przycisk wywołuje przejście do logowania.-->
    <Button
        android:id="@+id/or_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ok"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:onClick="openLogInActivity"
        android:text="@string/or_log_in"
        android:textAppearance="@style/log_in_register"
        android:background="@drawable/button"/>
</RelativeLayout>

